Fix a Tag into contact section MOBILE version

--- a/src/sass/layouts/_contact.scss
+++ b/src/sass/layouts/_contact.scss
@@ -71,6 +71,9 @@
         &__btns{
             grid-area: 2/1;
             margin: auto;
+            a{
+                text-decoration: none;
+            }
         }
     }
 }
